titulos,menu,cambios menores de apariencia

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -3,3 +3,14 @@
 .compoundsGrid td {
     vertical-align: top;
 }
+
+body{
+	/* color:#000077; */
+}
+
+.current{
+	color:#EE7600;
+}
+a{
+	text-decoration: none;
+}
