--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -6,6 +6,7 @@
 
 body{
 	/* color:#000077; */
+	padding-bottom: 20px;
 }
 
 .current{
@@ -30,7 +31,8 @@ a{
     color:blue;
     display: table-row;
     height: 0;
-    width=100%;
+    width=100%;    
+    
 }
 .ast{
 	color:blue;
@@ -40,4 +42,49 @@ a{
 
 .pdfLink{
 	color:red;
+}
+.createButton{
+	font-size:20px;
+	text-align:center;
+	/* background-color: red; */
+}
+.createButton:hover{
+	background-color: green;
+}
+#menuUl h2{
+	margin-bottom: 0px;
+}
+#menuUl{	
+	line-height: 1.1em;
+}
+
+.notice{
+	font-weight: bold; 
+} 
+
+#hugoFooter{
+	width:100%;
+	margin-top:-20px; 
+	height:20px;
+	position:fixed;
+	bottom:0;
+	right:0px;
+	background-color:black;
+	color:white;
+	padding-right:12px;
+	text-align: right;
+}
+
+
+#imageLogo{
+	margin-left:60px;
+	z-index:-1;
+	width:90px;
+	float: right;
+}
+#FQImage{
+	top:10px;
+	z-index:-1;
+	float:right;
+	width:200px;
 }
