--- a/src/main/webapp/resources/css/controls.css
+++ b/src/main/webapp/resources/css/controls.css
@@ -7,7 +7,7 @@ body {
 	overflow: hidden;
 	font-family: arial;
 }
-
+#properties {right:20px; top:100px; background: rgba(0,0,0,0.75); width:100px;}
 .menu { color: #fff; font-weight: bold; font-size: 12px; z-index: 100; width: 75px; position: absolute; top: 0px; padding: 16px; }
 .menu img, .menu canvas { width: 75px; margin: 10px 0 }
 
@@ -19,8 +19,11 @@ body {
 #lbl_dst { background:#800; }
 #lbl_src { background:green; }
 
-.btn { background: darkorange; width: 100px; cursor: pointer }
+.btn {background: darkorange; width: 100px; cursor: pointer }
+.btn:hover{background: darkorange;}
 
+.onlyhover .btn{background:none;}
+.onlyhover .btn:hover{background: darkorange;}
 #btn_sub { background: transparent }
 #btn_rsub { background: transparent }
 
