--- a/src/main/webapp/resources/css/controls.css
+++ b/src/main/webapp/resources/css/controls.css
@@ -7,13 +7,17 @@ body {
 	overflow: hidden;
 	font-family: arial;
 }
-#properties {right:20px; top:100px; background: rgba(0,0,0,0.75); width:100px;}
-.menu { color: #fff; font-weight: bold; font-size: 12px; z-index: 100; width: 75px; position: absolute; top: 0px; padding: 16px; }
+#controls {top:300px; text-align:left; left:120px; background:rgba(0,0,0,0.75);
+	 display:none;  width:720px; height: 400px;
+}
+
+#properties {right:20px; top:100px;  width:100px; background:rgba(0,0,0,0.75);}
+.menu { color: #fff; font-weight: bold; font-size: 12px; z-index: 100; width: 75px; position: absolute; top: 0px; padding: 16px;  }
 .menu img, .menu canvas { width: 75px; margin: 10px 0 }
 
 #images { background: rgba(0,0,0,0); left: 0px; }
 #backgrounds { background: rgba(0,0,0,0.0); left: 107px; }
-#labels { background: rgba(0,0,0,0.75); left: 0px; width: 100px }
+#labels {  left: 0px; width: 100px; background:rgba(0,0,0,0.75); }
 
 .lbl { color: #fff; z-index: 150; float:left; padding: 0.25em; width: 75px; display: block  }
 #lbl_dst { background:#800; }
